infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goals-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goals
  template:
    metadata:
      labels:
        app: goals
    spec:
      containers:
        - name: goals
          image: d5avard/goals
---
apiVersion: v1
kind: Service 
metadata:
  name: goals-srv
spec:
  selector:
    app: goals
  ports:
    - name: goals
      protocol: TCP
      port: 3000
      targetPort: 3000
